# pydraco

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
docs/: conf.py
src/: main.cpp
tests/: sample.drc  sample.ply  test.py
